--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: "Libre Baskerville", serif;
 }
 
 html {
@@ -9,6 +10,10 @@ html {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
 }
 
 :root {
@@ -24,15 +29,21 @@ a {
   color: var(--onyx);
 }
 
+.orangeText {
+  color: var(--orange);
+}
+.blueText {
+  color: var(--blue);
+}
+.greenText {
+  color: var(--green);
+}
+
 body {
   background-color: var(--off-white);
   color: var(--onyx);
   margin: 0;
   padding: 0;
-}
-
-.intro {
-  font-family: "Libre Baskerville", serif;
 }
 
 .title {
@@ -79,6 +90,12 @@ body {
   animation: rise 0.5s ease alternate both;
 }
 
+.card-round {
+  width: 30px;
+  height: 30px;
+  border-radius: 100px;
+}
+
 @keyframes rise {
   0% {
     box-shadow: 0px 0px var(--main-color);
@@ -105,13 +122,13 @@ body {
   }
 }
 
-.card-one {
+.card-orange {
   --main-color: var(--orange);
 }
-.card-two {
+.card-blue {
   --main-color: var(--blue);
 }
-.card-three {
+.card-green {
   --main-color: var(--green);
 }
 
@@ -137,4 +154,22 @@ body {
   .navigation {
     flex-direction: row;
   }
+}
+
+.about,
+.tech,
+.projects {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
+
+.about-copy,
+.tech-copy,
+.projects-copy {
+  width: 80vw;
+  max-width: 800px;
 }
