--- a/styles.css
+++ b/styles.css
@@ -91,8 +91,9 @@ body {
 }
 
 .card-round {
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
+  font-size: 1.3rem;
   border-radius: 100px;
 }
 
@@ -103,7 +104,7 @@ body {
   }
   100% {
     transform: scale(1.05) translate(-2.5%, -2.5%);
-    box-shadow: 5px 7px var(--main-color);
+    box-shadow: 10px 12px var(--main-color);
     border: 0.1px solid var(--main-color);
   }
 }
@@ -111,7 +112,7 @@ body {
 @keyframes fall {
   0% {
     transform: scale(1.05) translate(-2.5%, -2.5%);
-    box-shadow: 5px 7px var(--main-color);
+    box-shadow: 10px 12px var(--main-color);
     border: 0.1px solid var(--main-color);
   }
 
