--- a/scss/main.scss
+++ b/scss/main.scss
@@ -78,7 +78,6 @@ body {
   align-items: center;
   text-align: center;
   margin: 1rem;
-  background-color: #eeeee4;
   color: var(--main-color);
   width: 220px;
   height: 150px;
@@ -105,7 +104,10 @@ body {
   100% {
     transform: scale(1.05) translate(-2.5%, -2.5%);
     box-shadow: 10px 12px var(--main-color);
-    border: 0.1px solid var(--main-color);
+    border-top: 0.1px solid var(--main-color);
+    border-left: 0.1px solid var(--main-color);
+
+    background: var(--off-white);
   }
 }
 
@@ -114,6 +116,7 @@ body {
     transform: scale(1.05) translate(-2.5%, -2.5%);
     box-shadow: 10px 12px var(--main-color);
     border: 0.1px solid var(--main-color);
+    background: var(--off-white);
   }
 
   100% {
@@ -181,7 +184,7 @@ body {
   border-radius: 50%;
 }
 
-@for $i from 1 through 30 {
+@for $i from 1 through 100 {
   @keyframes particle-animation-#{$i} {
     100% {
       transform: translate3d(
@@ -194,7 +197,7 @@ body {
 
   .particle:nth-child(#{$i}) {
     animation: particle-animation-#{$i} 60s infinite;
-    $size: random(5) + 5 + px;
+    $size: random(1) + 5 + px;
     opacity: random(100) / 100;
     height: $size;
     width: $size;
