--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,6 +39,13 @@ p {
   color: var(--green);
 }
 
+.darkText,
+.orangeText,
+.blueText,
+.greenText {
+  font-family: inherit;
+}
+
 body {
   background-color: var(--off-white);
   color: var(--onyx);
