added tech stack icons

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,10 @@ p {
   font-family: "Roboto", sans-serif;
 }
 
+ul {
+  list-style: none;
+}
+
 :root {
   --off-white: rgba(238, 238, 228, 0.9);
   --grey: rgba(214, 214, 205, 0.9);
