- added more tech icons - sorted layout for icons - added color theme to icons

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -308,3 +308,9 @@ body::-webkit-scrollbar-thumb {
   opacity: 0.5;
   height: 50px;
 }
+
+.tech-icons {
+  width: 60%;
+  display: flex;
+  justify-content: space-around;
+}
