--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,13 @@ ul {
   list-style: none;
 }
 
+li {
+  margin-top: 0.5rem;
+}
+li:hover {
+  animation: gloss 0.5s ease alternate both;
+}
+
 :root {
   --off-white: rgba(238, 238, 228, 0.9);
   --grey: rgba(214, 214, 205, 0.9);
@@ -123,6 +130,21 @@ body {
 
 .card-icon:hover {
   animation: rise-icon 0.5s ease alternate both;
+}
+
+@keyframes gloss {
+  0% {
+    box-shadow: 0px 0px var(--main-color);
+    border: 0px hidden var(--main-color);
+  }
+  100% {
+    transform: scale(1.05) translate(-2.5%, -2.5%);
+    box-shadow: 10px 12px var(--main-color);
+    border-top: 0.1px solid var(--main-color);
+    border-left: 0.1px solid var(--main-color);
+
+    background: var(--off-white);
+  }
 }
 
 @keyframes rise {
