--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,7 +25,7 @@ li {
 }
 
 li:hover {
-  animation: gloss 0.4s ease infinite both;
+  animation: gloss 0.1s ease infinite both;
 }
 
 @keyframes gloss {
@@ -36,8 +36,9 @@ li:hover {
   25% {
     transform: skew(5deg, -5deg);
   }
+
   50% {
-    filter: opacity(70%);
+    filter: blur(1px);
   }
 
   75% {
@@ -52,7 +53,7 @@ li:hover {
   --blue: rgba(30, 144, 255, 0.9);
   --orange: rgba(251, 77, 61, 0.9);
   --green: rgba(3, 206, 164, 0.9);
-  --melon: rgba(253, 188, 180, 0.9);
+  --iris: rgba(93, 63, 211, 0.9);
 }
 
 .darkText {
