--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,30 +1,231 @@
+// Color Theme //
+:root {
+  --off-white: rgba(238, 238, 228, 0.9);
+  --grey: rgba(214, 214, 205, 0.9);
+  --onyx: rgba(53, 57, 53, 0.9);
+  --blue: rgba(30, 144, 255, 0.9);
+  --orange: rgba(251, 77, 61, 0.9);
+  --green: rgba(3, 206, 164, 0.9);
+  --iris: rgba(93, 63, 211, 0.9);
+}
+.orangeText {
+  color: var(--orange);
+}
+.blueText {
+  color: var(--blue);
+}
+.greenText {
+  color: var(--green);
+}
+.irisText {
+  color: var(--iris);
+}
+.darkText {
+  color: var(--onyx);
+}
+.darkText,
+.orangeText,
+.blueText,
+.greenText,
+.irisText {
+  font-family: inherit;
+  font-weight: bold;
+}
+.card-orange {
+  --main-color: var(--orange);
+}
+.card-blue {
+  --main-color: var(--blue);
+}
+.card-green {
+  --main-color: var(--green);
+}
+.card-iris {
+  --main-color: var(--iris);
+}
+// Element Selectors //
 * {
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
-
 html {
   scroll-behavior: smooth;
 }
-
+body {
+  background-color: var(--off-white);
+  color: var(--onyx);
+  margin: 0;
+  padding: 0;
+}
 a {
   text-decoration: none;
   color: inherit;
 }
-
 ul {
   list-style: none;
 }
-
 li {
   margin-top: 0.5rem;
 }
-
+// Class Selectors //
+.title {
+  --main-color: var(--grey);
+  text-align: center;
+  max-width: 450px;
+  padding: 25px;
+  border-radius: 60px;
+  animation: fall 1s ease alternate both;
+}
+.card {
+  --main-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 1rem;
+  color: var(--main-color);
+  width: 220px;
+  height: 150px;
+  border-radius: 15px;
+  animation: fall 1s ease alternate both;
+}
+.card-round {
+  width: 50px;
+  height: 50px;
+  font-size: 1.3rem;
+  border-radius: 100px;
+}
+.card-icon {
+  --main-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--main-color);
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  animation: fall-icon 1s ease alternate both;
+}
+.intro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 1rem;
+}
+.navigation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  height: 100vh;
+}
+.tech-icons {
+  width: 60%;
+  display: flex;
+  justify-content: space-around;
+}
+.arrowbuttons {
+  display: flex;
+  justify-content: center;
+}
+.navbar {
+  display: flex;
+  flex-direction: row-reverse;
+  position: fixed;
+  width: 100%;
+  padding: 0 0.5rem;
+}
+.icon {
+  padding: 0 5px;
+  margin-left: 0.5rem;
+}
+// Multi-class Selectors //
+.about,
+.tech,
+.projects {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
+.about-copy,
+.tech-copy,
+.projects-copy {
+  width: 80vw;
+  max-width: 800px;
+}
+// Hover/Focus //
 li:hover,
 li:focus {
   animation: wiggle 0.2s ease both;
 }
-
+.title:hover,
+.title:focus {
+  animation: rise 1s ease alternate both;
+}
+.card:hover,
+.card:focus {
+  animation: rise 0.5s ease alternate both;
+}
+.card-icon:hover,
+.card-icon:focus {
+  animation: rise-icon 0.5s ease alternate both;
+}
+// Media Queries //
+@media only screen and (min-width: 600px) {
+  .navigation {
+    flex-direction: row;
+  }
+}
+// Particle background //
+.particle {
+  position: absolute;
+  border-radius: 35%;
+}
+@for $i from 1 through 100 {
+  @keyframes particle-animation-#{$i} {
+    100% {
+      transform: translate3d(
+        (random(90) * 1vw),
+        (random(90) * 1vh),
+        (random(100) * 1px)
+      );
+    }
+  }
+  .particle:nth-child(#{$i}) {
+    animation: particle-animation-#{$i} 60s infinite;
+    $size: random(1) + 5 + px;
+    opacity: random(100) / 100;
+    height: $size;
+    width: $size;
+    animation-delay: -$i * 0.2s;
+    transform: translate3d(
+      (random(90) * 1vw),
+      (random(90) * 1vh),
+      (random(100) * 1px)
+    );
+    background: hsl(random(360), 70%, 50%);
+  }
+}
+// Scrollbar Styling //
+body::-webkit-scrollbar {
+  width: 12px;
+}
+body::-webkit-scrollbar-track {
+  background: var(--off-white);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: var(--orange);
+  border-radius: 50px;
+  opacity: 0.5;
+  height: 50px;
+}
+// Animations //
 @keyframes wiggle {
   0% {
     transform: skew(0deg);
@@ -41,109 +242,6 @@ li:focus {
     transform: skew(-7deg, 7deg);
   }
 }
-
-:root {
-  --off-white: rgba(238, 238, 228, 0.9);
-  --grey: rgba(214, 214, 205, 0.9);
-  --onyx: rgba(53, 57, 53, 0.9);
-  --blue: rgba(30, 144, 255, 0.9);
-  --orange: rgba(251, 77, 61, 0.9);
-  --green: rgba(3, 206, 164, 0.9);
-  --iris: rgba(93, 63, 211, 0.9);
-}
-
-.darkText {
-  color: var(--onyx);
-}
-
-.orangeText {
-  color: var(--orange);
-}
-.blueText {
-  color: var(--blue);
-}
-.greenText {
-  color: var(--green);
-}
-
-.irisText {
-  color: var(--iris);
-}
-
-.darkText,
-.orangeText,
-.blueText,
-.greenText,
-.irisText {
-  font-family: inherit;
-  font-weight: bold;
-}
-
-body {
-  background-color: var(--off-white);
-  color: var(--onyx);
-  margin: 0;
-  padding: 0;
-}
-
-.title {
-  --main-color: var(--grey);
-  text-align: center;
-  max-width: 450px;
-  padding: 25px;
-  border-radius: 60px;
-  animation: fall 1s ease alternate both;
-}
-
-.title:hover,
-.title:focus {
-  animation: rise 1s ease alternate both;
-}
-
-.card {
-  --main-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin: 1rem;
-  color: var(--main-color);
-  width: 220px;
-  height: 150px;
-  border-radius: 15px;
-  animation: fall 1s ease alternate both;
-}
-
-.card:hover,
-.card:focus {
-  animation: rise 0.5s ease alternate both;
-}
-
-.card-round {
-  width: 50px;
-  height: 50px;
-  font-size: 1.3rem;
-  border-radius: 100px;
-}
-
-.card-icon {
-  --main-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: var(--main-color);
-  width: 40px;
-  height: 40px;
-  border-radius: 50px;
-  animation: fall-icon 1s ease alternate both;
-}
-
-.card-icon:hover,
-.card-icon:focus {
-  animation: rise-icon 0.5s ease alternate both;
-}
-
 @keyframes rise {
   0% {
     box-shadow: 0px 0px var(--main-color);
@@ -158,7 +256,6 @@ body {
     background: var(--off-white);
   }
 }
-
 @keyframes rise-icon {
   0% {
     box-shadow: 0px 0px var(--main-color);
@@ -173,7 +270,6 @@ body {
     background: var(--off-white);
   }
 }
-
 @keyframes fall {
   0% {
     transform: scale(1.05) translate(-2.5%, -2.5%);
@@ -189,7 +285,6 @@ body {
     border: 0px hidden var(--main-color);
   }
 }
-
 @keyframes fall-icon {
   0% {
     transform: scale(1.05) translate(-2.5%, -2.5%);
@@ -204,128 +299,4 @@ body {
     box-shadow: none;
     border: 0px hidden var(--main-color);
   }
-}
-
-.card-orange {
-  --main-color: var(--orange);
-}
-.card-blue {
-  --main-color: var(--blue);
-}
-.card-green {
-  --main-color: var(--green);
-}
-.card-iris {
-  --main-color: var(--iris);
-}
-
-.intro {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 1rem;
-}
-
-.navigation {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
-  height: 100vh;
-}
-
-@media only screen and (min-width: 600px) {
-  .navigation {
-    flex-direction: row;
-  }
-}
-
-.about,
-.tech,
-.projects {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  flex-direction: column;
-}
-
-.about-copy,
-.tech-copy,
-.projects-copy {
-  width: 80vw;
-  max-width: 800px;
-}
-
-/* PARTICLES */
-.particle {
-  position: absolute;
-  border-radius: 35%;
-}
-
-@for $i from 1 through 100 {
-  @keyframes particle-animation-#{$i} {
-    100% {
-      transform: translate3d(
-        (random(90) * 1vw),
-        (random(90) * 1vh),
-        (random(100) * 1px)
-      );
-    }
-  }
-
-  .particle:nth-child(#{$i}) {
-    animation: particle-animation-#{$i} 60s infinite;
-    $size: random(1) + 5 + px;
-    opacity: random(100) / 100;
-    height: $size;
-    width: $size;
-    animation-delay: -$i * 0.2s;
-    transform: translate3d(
-      (random(90) * 1vw),
-      (random(90) * 1vh),
-      (random(100) * 1px)
-    );
-    background: hsl(random(360), 70%, 50%);
-  }
-}
-
-.navbar {
-  display: flex;
-  flex-direction: row-reverse;
-  position: fixed;
-  width: 100%;
-  padding: 0 0.5rem;
-}
-
-.icon {
-  padding: 0 5px;
-  margin-left: 0.5rem;
-}
-
-body::-webkit-scrollbar {
-  width: 12px; /* width of the entire scrollbar */
-}
-body::-webkit-scrollbar-track {
-  background: var(--off-white); /* color of the tracking area */
-}
-body::-webkit-scrollbar-thumb {
-  background-color: var(--orange); /* color of the scroll thumb */
-  border-radius: 50px; /* roundness of the scroll thumb */
-  opacity: 0.5;
-  height: 50px;
-}
-
-.tech-icons {
-  width: 60%;
-  display: flex;
-  justify-content: space-around;
-}
-
-.arrowbuttons {
-  display: flex;
-  justify-content: center;
 }
