--- a/scss/main.scss
+++ b/scss/main.scss
@@ -69,7 +69,7 @@ li {
 }
 // Class Selectors ///////////////////////////////////////////////////
 .title {
-  --main-color: var(--grey);
+  --main-color: var(--onyx);
   text-align: center;
   max-width: 450px;
   padding: 25px;
@@ -77,7 +77,6 @@ li {
   animation: fall 1s ease alternate both;
 }
 .card {
-  --main-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -96,7 +95,6 @@ li {
   border-radius: 100px;
 }
 .card-icon {
-  --main-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
