--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,6 +74,7 @@ li {
   text-align: center;
   max-width: 450px;
   padding: 25px;
+  margin: 1rem;
   border-radius: 60px;
   animation: fall 0.5s ease both;
 }
@@ -116,14 +117,14 @@ li {
 }
 .navigation {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   padding: 0;
   height: 100vh;
 }
 .tech-icons {
-  min-width: 300px;
+  min-width: 240px;
   width: 40%;
   display: flex;
   justify-content: space-between;
@@ -179,12 +180,11 @@ li:focus {
   animation: rise-icon 0.5s ease alternate both;
 }
 // Media Queries ///////////////////////////////////////////////////
-@media only screen and (min-width: 600px) {
-  .navigation {
-    flex-direction: row;
-  }
-}
 @media only screen and (max-width: 600px) {
+  .navigation {
+    flex-direction: column;
+  }
+
   .about,
   .tech,
   .projects {
@@ -193,8 +193,12 @@ li:focus {
   .about-copy,
   .tech-copy,
   .projects-copy {
-    padding-top: 3.5rem;
+    padding-top: 3.6rem;
     font-size: 0.8rem;
+  }
+  ul {
+    justify-content: center;
+    align-items: center;
   }
 }
 // Particle background ///////////////////////////////////////////////////
