--- a/scss/main.scss
+++ b/scss/main.scss
@@ -109,6 +109,19 @@ li {
   border-radius: 50px;
   animation: fall-icon 0.5s ease alternate both;
 }
+.card-project {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 1rem;
+  padding: 1rem;
+  color: var(--main-color);
+  width: 300px;
+  height: 300px;
+  border-radius: 15px;
+  animation: fall 0.5s ease both;
+}
 .intro {
   display: flex;
   justify-content: center;
@@ -179,6 +192,10 @@ li:focus {
 .card-icon:hover,
 .card-icon:focus {
   animation: rise-icon 0.5s ease alternate both;
+}
+.card-project:hover,
+.card-project:focus {
+  animation: rise 0.5s ease alternate both;
 }
 // Media Queries ///////////////////////////////////////////////////
 @media only screen and (max-width: 600px) {
