--- a/scss/main.scss
+++ b/scss/main.scss
@@ -109,6 +109,21 @@ li {
   border-radius: 50px;
   animation: fall-icon 0.5s ease alternate both;
 }
+.card-proj {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  color: var(--main-color);
+  width: 200px;
+  height: 180px;
+  border-radius: 15px;
+  animation: fall 0.5s ease both;
+}
+.proj-item {
+  border-radius: 15px;
+  width: 180px;
+}
 .intro {
   display: flex;
   justify-content: center;
@@ -146,7 +161,12 @@ li {
   padding: 0 5px;
   margin-left: 0.5rem;
 }
-
+.projects-container {
+  display: grid;
+  margin: 1rem;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+}
 // Multi-class Selectors ///////////////////////////////////////////////////
 .about,
 .tech,
@@ -181,6 +201,10 @@ li:focus {
 .card-icon:focus {
   animation: rise-icon 0.5s ease alternate both;
 }
+.card-proj:hover,
+.card-proj:focus {
+  animation: rise 0.5s ease alternate both;
+}
 // Media Queries ///////////////////////////////////////////////////
 @media only screen and (max-width: 600px) {
   .navigation {
@@ -192,6 +216,10 @@ li:focus {
   .card {
     width: 150px;
     height: 100px;
+  }
+  .projects-container {
+    display: flex;
+    flex-direction: column;
   }
   .about,
   .tech,
