--- a/scss/main.css
+++ b/scss/main.css
@@ -171,6 +171,7 @@ li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
